--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="stop">stop</button>
                 <button class="reset">reset</button>
             </div>
-            <h2 contenteditable="true">programming time sodiol 😴</h2>
+            <h2 contenteditable="true">Coding time 😴</h2>
         </div>
 
         <div class="error">
