--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body oncontextmenu="return false">
+<body>
 
     <div class="container">
         <div class="todo-app">
             <h2>To-Do list <img src="images/icon.png"></h2>
+            <p class="popup">Sorry, You must write something!</p>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your to do">
                 <button id="input-btn" onclick="addTask()">Add</button>
@@ -32,27 +33,19 @@
                 <button class="stop">stop</button>
                 <button class="reset">reset</button>
             </div>
-            <h2 contenteditable="true">Coding time 😴</h2>
-        </div>
-
-        <div class="error">
-            <div class="popup">
-                <img src="images/[CITYPNG.COM]PNG Red Round Close X Icon - 700x700.png">
-                <h2>Error</h2>
-                <p>You must write something. Try again! </p>
-                <button type="button">OK</button>
-            </div>
+            <h2 contenteditable="true">programming time sodiol 😴</h2>
         </div>
 
     </div>
 
     <footer>
         <div class="footer-content">
-          <p>To-Do List & Timer</p>
-          <p>© - 2024 Developed by - Sodiol Sayem</p>
-          <p>Find me on <a href="https://www.facebook.com/profile.php?id=100090420093597" target="_blank">Facebook</a></p>
+            <p>To-Do List & Timer</p>
+            <p>© - 2024 Developed by - Sodiol Sayem</p>
+            <p>Find me on <a href="https://www.facebook.com/profile.php?id=100090420093597" target="_blank">Facebook</a>
+            </p>
         </div>
-      </footer>
+    </footer>
 
 
     <script src="script.js"></script>
